compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_unknown_call_callee.snap
---
source: tests/fixtures.rs
assertion_line: 4782
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/unknown_call_callee.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × unknown value
   ╭─[tests/fixtures/diagnostics/types/unknown_call_callee.ml:2:3]
 1 │ fn main() {
 2 │   missing_value()
   ·   ───────┬───────
   ·          ╰── `missing_value` is not bound in this scope
 3 │ }
   ╰────
  help: bind the function with `let` or define it before calling it
